[gd_scene load_steps=2 format=3 uid="uid://sidebar_scene_001"]

[ext_resource type="Script" path="res://Systems/UI/sidebar.gd" id="1_sidebar"]

[node name="Sidebar" type="CanvasLayer"]
layer = 5
script = ExtResource("1_sidebar")

[node name="PanelContainer" type="PanelContainer" parent="."]
anchors_preset = -1
anchor_left = 0.75
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="CurrencyLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.843137, 0, 1)
theme_override_font_sizes/font_size = 20
text = "Bounces: 0"
horizontal_alignment = 1

[node name="TabButtons" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="BallsTabButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/TabButtons"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 18
text = "Balls"

[node name="UpgradesTabButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/TabButtons"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 18
text = "Upgrades"

[node name="TabContent" type="Control" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="BallsTab" type="ScrollContainer" parent="PanelContainer/MarginContainer/VBoxContainer/TabContent"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
horizontal_scroll_mode = 0

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/TabContent/BallsTab"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 5

[node name="UpgradesTab" type="ScrollContainer" parent="PanelContainer/MarginContainer/VBoxContainer/TabContent"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
horizontal_scroll_mode = 0

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/TabContent/UpgradesTab"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 5

[node name="PrestigeSection" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
theme_override_constants/separation = 5

[node name="HSeparator" type="HSeparator" parent="PanelContainer/MarginContainer/VBoxContainer/PrestigeSection"]
layout_mode = 2

[node name="PrestigePointsLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/PrestigeSection"]
layout_mode = 2
theme_override_colors/font_color = Color(0.5, 1, 0.5, 1)
theme_override_font_sizes/font_size = 18
text = "Prestige Points: +0"
horizontal_alignment = 1

[node name="PrestigeButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/PrestigeSection"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "PRESTIGE"

[node name="EssenceLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.5, 1, 1)  # Purple color
theme_override_font_sizes/font_size = 18
text = "Essence: 0"
horizontal_alignment = 1

[node name="MaxBallsLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Max Basic Balls: 20"
horizontal_alignment = 1